CODETOOLS-7902675 Performance and code improvements